# video-mosaicking

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: affine_transformation.hpp  agent.hpp  bow_overlap_model.hpp  data_preparation.hpp  graph.hpp  interaction_loop.hpp  landmark_database.hpp  linear_algebra.hpp  position_overlap_model.hpp  structures_for_interactive_mosaicking.hpp  unionfind.hpp  updatable_cholesky.hpp  utilities.hpp
src/: CMakeLists.txt  affine_transformation.cpp  agent.cpp  bow_overlap_model.cpp  data_preparation.cpp  graph.cpp  interaction_loop.cpp  landmark_database.cpp  linear_algebra.cpp  position_overlap_model.cpp  unionfind.cpp  utilities.cpp
